--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -17,7 +17,7 @@
             <div class="toolbar-left">
                 <h1 class="app-title">🌙 Luna TV 配置编辑器</h1>
                 <div class="file-info">
-                    <span id="file-name">luna-tv-config.json</span>
+                    <span id="file-name">LunaTV-config.json</span>
                     <span id="file-size" class="file-size"></span>
                     <span id="file-status" class="file-status"></span>
                 </div>
