--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -203,6 +203,6 @@
 
     <!-- 🔧 使用稳定版本的Monaco编辑器 -->
     <script src="{{70}}"></script>
-    <script src="script-fixed.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
