--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🌙 Luna TV 配置编辑器 - 修复版</title>
-    <meta name="description" content="专业的JSON配置编辑器，Monaco兼容性修复">
+    <title>🌙 Luna TV 配置编辑器 - 完整修复版</title>
+    <meta name="description" content="专业的JSON配置编辑器，支持GitHub同步">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='{{69}}' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌙</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='75' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌙</text></svg>">
 </head>
 <body>
     <div class="app-container">
@@ -201,8 +201,8 @@
         </div>
     </div>
 
-    <!-- 🔧 使用稳定版本的Monaco编辑器 -->
-    <script src="{{70}}"></script>
+    <!-- 🛠️ 使用真实CDN地址，而不是占位符 -->
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
