--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -202,7 +202,7 @@
     </div>
 
     <!-- 🛠️ 使用真实CDN地址，而不是占位符 -->
-    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.js"></script>
+    <script src="{{166}}"></script>
     <script src="script.js"></script>
 </body>
 </html>
