--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -202,7 +202,7 @@
     </div>
 
     <!-- 🛠️ 使用真实CDN地址，而不是占位符 -->
-    <script src="{{166}}"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
