--- a/web-editor/index.html
+++ b/web-editor/index.html
@@ -13,7 +13,7 @@
         <!-- 顶部工具栏 -->
         <header class="top-toolbar">
             <div class="toolbar-left">
-                <h1 class="app-title">🌙LunaTV配置编辑器</h1>
+                <h1 class="app-title">LunaTV配置编辑器</h1>
                 <div class="file-info">
                     <span id="file-name">LunaTV-config.json</span>
                     <span id="file-size" class="file-size"></span>
